--- a/src/pages/Home/style.css
+++ b/src/pages/Home/style.css
@@ -1,103 +1,75 @@
-@import url(https://fonts.googleapis.com/css?family=News+Cycle:400,700);
-
-.fade {
-  position: relative;
-  width: 100%;
-  min-height: 50vh;
-  top: -25px;
-  background-image: linear-gradient(0deg, transparent, black 75%);
-  z-index: 1;
-}
-.intro {
-  text-align: center;
-  color: #09f;
-  font-size: 175%;
-  font-family: 'Pathway Gothic One', sans-serif;
-  animation: intro 6s ease-out 1s;
-  opacity: 0;
-}
-
-.logo {
-  width: 100%;
-  height: 0px;
-  opacity: 0;
-
+section.container {
+  width: 35%;
+  height: 100%;
+  
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
-
-  animation: logo 9s ease-out 9s;
-}
-
-.star-wars {
-  display: flex;
   justify-content: center;
-  position: relative;
-  height: 300px;
-  color: #feda4a;
+  margin: auto;
+
+  color: #fff;
   font-family: 'Pathway Gothic One', sans-serif;
-  font-size: 500%;
-  font-weight: 600;
-  letter-spacing: 6px;
-  line-height: 150%;
-  perspective: 400px;
-  text-align: justify;
 }
 
-.crawl {
-  position: relative;
-  top: 99999px;
-  opacity: 0;
-  transform-origin: 50% 100%;
-  animation: crawl 60s linear 13s;
+section.container img {
+  width: 300px;
+  height: 100px;
 }
 
-.crawl > .title {
-  font-size: 90%;
-  text-align: center;
-}
-
-.crawl > .title h1 {
-  margin: 0 0 100px;
+section.container label {
+  width: 100%;
+  font-size: x-large;
+  color: #feda4a;
   text-transform: uppercase;
 }
 
-@keyframes intro {
-  20% { 
-    opacity: 1; 
-  }
-  90% {
-    opacity: 1;
-  }
-  100% { 
-    opacity: 0;
-  }
+section.container input {
+  width: 100%;
+  padding: 14px;
+  border-radius: 20px;
+  margin: 10px auto;
+  transition: box-shadow 0.3s;
 }
 
-@keyframes logo {
-  0% {
-    transform: scale(2.75); 
-    opacity: 1;
-  }
-  50% { 
-    opacity: 1;
-  }
-  100% {
-    transform: scale(.1);
-    opacity: 0;
-  }
+section.container input:focus {
+  box-shadow: 0 0px 10px 0 #feda4a;
+	-moz-box-shadow: 0 0px 10px 0 #feda4a;
+	-webkit-box-shadow: 0 0px 10px 0 #feda4a;
 }
 
-@keyframes crawl {
-  0% {
-    opacity: 1;
-    top: 600px;
-    transform: rotateX(20deg)  translateZ(0);
-  }
-  100% {
-    opacity: 1;
-    top: -6000px;
-    transform: rotateX(25deg) translateZ(-2500px);
-  }
+section.container div.buttonGroup {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 10px;
+  margin-top: 10px;
+}
+
+section.container button {
+  width: 100%;
+  height: 50px;
+  border-radius: 20px;
+  margin: 5px auto;
+  font-size: large;
+  cursor: pointer;
+
+  transition: background 0.3s;
+  transition: box-shadow 0.3s;
+}
+
+section.container button:hover {
+  background: #feda4a;
+
+  box-shadow: 0 0px 10px 0 #feda4a;
+	-moz-box-shadow: 0 0px 10px 0 #feda4a;
+	-webkit-box-shadow: 0 0px 10px 0 #feda4a;
+}
+
+section.container button[name="wipe"]:hover {
+  background: #dd1e1e;
+  color: #fff;
+  
+  box-shadow: 0 0px 10px 0 #dd1e1e;
+	-moz-box-shadow: 0 0px 10px 0 #dd1e1e;
+	-webkit-box-shadow: 0 0px 10px 0 #dd1e1e;
 }
